--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="https://www.smashthewalls.com/">Smash The Wall</a>
     </li>
     <li>
-        <a href="https://www.wordle.com/">wordle</a>
+        <a href="https://www.wordle.com/">Wordle</a>
     </li>
     <li>
         <a href="https://www.hackertyper.com/">Hacker Ty.per</a>
