--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         </li>
     <li>
-        <a href="https://www.smashthewalls.com/">Smash The Wall</a>
+        <a href="https://www.smashthewalls.com/">Smash Wall</a>
     </li>
     <li>
         <a href="https://www.wordle.com/">Wordle</a>
