--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://www.wordle.com/">World</a>
     </li>
     <li>
-        <a href="https://www.hackertyper.com/">Hacker Ty.per</a>
+        <a href="https://www.hackertyper.com/">Hacker Typer</a>
     </li>
     <li>
         <a href="https://www.Stellarium.com/">Stellarium</a>
