--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Write your code below -->
  <ol start="5">
     <li>
-        <a href="https://www.producthunt.com/">Product Hun</a>
+        <a href="https://www.producthunt.com/">Product Hunt</a>
 
         </li>
     <li>
