--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="https://www.smashthewalls.com/">Smash Wall</a>
     </li>
     <li>
-        <a href="https://www.wordle.com/">World </a>
+        <a href="https://www.wordle.com/">World W</a>
     </li>
     <li>
         <a href="https://www.hackertyper.com/">Hacker Typer</a>
