--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         </li>
     <li>
-        <a href="https://www.smashthewalls.com/">Sma Wall</a>
+        <a href="https://www.smashthewalls.com/">Smar Wall</a>
     </li>
     <li>
         <a href="https://www.wordle.com/">World </a>
